--- a/ui/css/src/scss/components/multi-wizzard.scss
+++ b/ui/css/src/scss/components/multi-wizzard.scss
@@ -2217,7 +2217,6 @@
 div.toolbar,
 .multi-wizard.zone-wizard .select-container .field .select-array-item {
   display: block;
-  height: 1px;
 }
 
 div.toolbar:after,
